<resources>
    <string name="app_name">Witness</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">디데이</string>
    <string name="menu_bucket_list">버킷리스트</string>
    <string name="menu_snail_letter">달팽이 편지</string>
    <string name="menu_couple_map">커플지도</string>


    <string name="home_text_view_top">우리는</string>
    <string name="home_text_view_center">일없습니다</string>
    <string name="home_text_view_bottom">일째</string>

    <string name="bucket_list">Bucket List</string>
    <string name="dialog_question_when">처음 만난 날이 언제인가요?</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_add">추가</string>
    <string name="dialog_add_anniversary">기념일 추가하기</string>
    <string name="dialog_hint1">기념일 명을 입력하세요</string>
    <string name="dialog_add_bucket_list">버킷리스트 작성하기</string>
    <string name="dialog_repeat_year">매년 반복</string>
    <string name="dialog_delete_anniversary">기념일 삭제하기</string>
    <string name="dialog_delete">기념일을 삭제 하시겠어요?</string>

</resources>