<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bucket_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_bucket_list" />
        <item
            android:id="@+id/nav_snail_letter"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_snail_letter" />
        <item
            android:id="@+id/nav_couple_map"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_couple_map" />
    </group>
</menu>