<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/li"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_title_border"
        android:fontFamily="@font/font_hangul"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/dialog_add_anniversary"
        android:textColor="@color/colorLightBlack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorBasic"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNewAnniv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/font_hangul"
            android:gravity="center"
            android:hint="@string/dialog_hint1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cbRepeatYear"
            android:fontFamily="@font/font_hangul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dialog_repeat_year" />

        <DatePicker
            android:id="@+id/datePickerAddAniv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_cancel"
            android:clickable="true"
            android:fontFamily="@font/font_hangul"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorLightBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_ok"
            android:clickable="true"
            android:fontFamily="@font/font_hangul"
            android:gravity="center"
            android:text="@string/dialog_add"
            android:textColor="@color/colorLightBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>