<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/li"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorBasic"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:fontFamily="@font/font_hangul"
            android:text="@string/dialog_delete"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_cancel"
                android:clickable="true"
                android:fontFamily="@font/font_hangul"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="@color/colorLightBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_ok"
                android:clickable="true"
                android:fontFamily="@font/font_hangul"
                android:gravity="center"
                android:text="@string/dialog_ok"
                android:textColor="@color/colorLightBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>