<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/dialog_title_border"
        android:fontFamily="@font/font_hangul"
        android:gravity="center"
        android:text="@string/dialog_question_when"
        android:textColor="@color/colorLightBlack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBasic"
        android:gravity="center">

        <DatePicker
            android:id="@+id/datePickerStartDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_cancel"
            android:clickable="true"
            android:fontFamily="@font/font_hangul"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="@color/colorLightBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_ok"
            android:clickable="true"
            android:fontFamily="@font/font_hangul"
            android:gravity="center"
            android:text="@string/dialog_ok"
            android:textColor="@color/colorLightBlack"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>